Project marketplace {
  database_type: 'PostgreSQL'
}

/*****************************************************************************************
*                                   Fiscal information                                   *
*****************************************************************************************/

Table taxes {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    satCode varchar(8) [not null]
    base decimal(12,6) [not null, Note: 'Amount to apply the tax, if quota is true, this is the quota amount, if false, this is the percentage to be calculated']
    retention bool [default:false]
    quota bool [default:false]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]

    Note: 'Providers taxes'
}

/*****************************************************************************************
*                                        Catalogs                                        *
*****************************************************************************************/

// Product status
Table product_status {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    description varchar(64) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
}

// Variant status
Table variant_status {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    description varchar(64) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
}

// Order status
Table order_status {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    description varchar(64) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
}

// Client tatus
Table client_status {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    description varchar(64) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
}

// Content units
Table content_units {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(100) [not null]
    code varchar(100) [not null]
    fiscalCode varchar(64) [null, Note: 'SAT meassurment unit code']
    magnitude varchar(24) [not null]
    value decimal(15,7) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
}

// Countries
Table countries {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(100) [not null]
    code varchar(2) [not null, Note: 'ISO 3166-1 alpha-2 code']
    icon varchar(64) [null, Note: 'Country flag icon']
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
}

// Fiscal regimes
Table fiscal_regimes {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    code varchar(8) [not null, Note: 'SAT fiscal regime code']
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
}

// Variant tags
Table variant_tags {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
}

// Brands
Table brands {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(128) [null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
}

/*****************************************************************************************
*                                        Products                                        *
*****************************************************************************************/
// Dapartments
Table departments {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
}

// sections
Table sections {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations
    departmentId UUID [ref: > departments.id]
}

// Enum de los tipos de productos
Enum product_kind {
    service
    product
}

// Products
Table products {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(94) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    kind product_kind
    satCode varchar(24) [null, Note: 'SAT product code']
    // relations
    section UUID [null,ref: > sections.id]
    statusId UUID [null,ref: > product_status.id]
    contentUnitId UUID [null,ref: > content_units.id]
}

// Product fill directions
Table product_fill_directions {
    id UUID [pk, default: `uuid_generate_v4()`]
    directions varchar [not null]
    // relations
    productId UUID [ref: > products.id]
}

// Product averages
Table products_averages {
    id UUID [pk, default: `uuid_generate_v4()`]
    price varchar(94) [not null] // Precio promedio de las variantes que pertenecen este producto
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations unit_id UUID [ref: > content_units.id] // Media de la unidad utilizada en las variantes para este producto
    productId UUID [ref: > products.id]
}

// Product taxes
Table variant_taxes {
    id UUID [pk, default: `uuid_generate_v4()`]
    isDeleted bool [default: false]
    // relations
    productId UUID [ref: > products.id]
    taxId UUID [ref: > taxes.id]
}

//Provider products
Table products_providers {
    id UUID [pk, default: `uuid_generate_v4()`]
    averagePrice decimal(12,6) [not null]
    variantsQuantity int [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations
    providerId UUID [ref: > providers.id]
    productId UUID [ref: > products.id]
}

// Variant information
Table variants {
    id UUID [pk, default: `uuid_generate_v4()`]
    description varchar(255) [null]
    content decimal(12,6) [not null]
    inStock bool [default: true, Note: 'Indica si el proveedor tiene producto en stock']
    price decimal(12,6) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations
    displayUnitId UUID [ref: > content_units.id]
    statusId UUID [ref: > variant_status.id]
    providerId UUID [ref: > providers.id]
    countryId UUID [ref: > countries.id]
    productId UUID [ref: > products.id]
    brandId UUID [ref: > brands.id]
}
Ref: variants.id <> variant_tags.id


/*****************************************************************************************
*                                     Providers data                                     *
*****************************************************************************************/

// Tax information
Table provider_tax_information {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(255) [not null]
    TaxId varchar(13) [not null, Note: 'RFC']
    privateKeyPass varchar(255) [not null] // Consultar las opcions de seguridad

    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations
    fiscalRegimeId UUID [ref: > fiscal_regimes.id]
    providerId UUID [ref: > providers.id]
}

// Enum de los Status de los proveedores
Enum provider_status {
    active
    banned
}
// Provider information
Table providers {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(128) [not null]
    status provider_status
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations
    users UUID [ref: <> users.id]
}

/*****************************************************************************************
*                                       Users  data                                      *
*****************************************************************************************/

// Tabla de usuarios
Table users {
    id UUID [pk, default: `uuid_generate_v4()`]
    firstName varchar(100) [not null]
    lastName  varchar(100) [not null]
    phone varchar(100) [not null]
    email varchar(100) [not null]
    active bool [default: false]
    lastLoginAt timetz [default: `now()`]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    inviteSentAt timetz [null]
    deletedAt timetz [null]
    authId varchar(100)
    veified bool [default: false]
    // relations
    roleId UUID [ref: > roles.id]
    providers UUID [ref: <> providers.id]
}

/*****************************************************************************************
*                                       Orders data                                      *
*****************************************************************************************/

// Orders
Table orders {
    id UUID [pk, default: `uuid_generate_v4()`]
    identifier varchar(8) [not null,Note: 'Template: YYMMXXXX']
    commission decimal(12,9) [not null]

    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations
    client UUID [ref: > clients.id]
    providerId UUID [ref: > providers.id]
    deliveryAdressId UUID [ref: > client_delivery_addresses.id]
    // indexes
    uuid_index varchar(8) [unique]
}

// Order items
Table order_items {
    id UUID [pk, default: `uuid_generate_v4()`]
    quantity decimal(12,6) [not null]
    price decimal(12,6) [not null]

    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations
    orderId UUID [ref: > orders.id]
    variantId UUID [ref: > variants.id]
}

// Order status history
Table order_status_history {
    id UUID [pk, default: `uuid_generate_v4()`]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations
    orderId UUID [ref: > orders.id]
    statusId UUID [ref: > order_status.id]
    // agregar a quién modificó???
}

/*****************************************************************************************
*                                      Clients data                                      *
*****************************************************************************************/

// Clients tax information
Table client_tax_information {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(255) [not null]
    rfc varchar(13) [not null, Note: 'RFC']
    adress varchar(512) [not null]

    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations
    clientId UUID [ref: > providers.id]
    fiscalRegimeId UUID [ref: > fiscal_regimes.id]
    Note: 'Client tax information'
}

// Clients information
Table clients {
    id UUID [pk, default: `uuid_generate_v4()`]
    name varchar(128) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations
    statusId UUID [ref: > client_status.id]
}

// Clients addresses
Table client_delivery_addresses {
    id UUID [pk, default: `uuid_generate_v4()`]
    street varchar(128) [not null]
    exterior varchar(64) [not null]
    interior varchar(64) [not null]
    neighborhood varchar(128) [not null]
    city varchar(128) [not null]
    state varchar(128) [not null]
    zip varchar(32) [not null]
    comments varchar(512) [not null]
    schedule varchar(64) [not null]
    createdAt timetz [default: `now()`]
    updatedAt timetz [default: `now()`]
    deletedAt timetz [null]
    isDeleted bool [default: false]
    // relations
    client UUID [ref: > clients.id]
    country UUID [ref: > countries.id]

}
